--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -6,15 +6,15 @@
 
 \emph{Status: Not Started}
 
-\subsubsection{Interoperibility of the recommendation queries}
+\subsubsection{Interoperability of the recommendation queries}
 
 \emph{Status: Not Started}
 
-\subsubsection{Interoperibility of the user and domain models}
+\subsubsection{Interoperability of the user and domain models}
 
 \emph{Status: Not Started}
 
-\subsubsection{Interoperibility of the recommendation results}
+\subsubsection{Interoperability of the recommendation results}
 
 \emph{Status: Not Started}
 
