--- a/sections/acknowledgements.tex
+++ b/sections/acknowledgements.tex
@@ -1,5 +1,5 @@
 \chapter*{Acknowledgements}
 
-Before anything, I would like to extend my thanks to my supervisor, Dr Nigel Martin, who has been a great support from the very start to the end. Also, I want to acknowledge my boss, Edward Griffith, for accomodating me to study while working.
+Before anything, I would like to extend my thanks to my supervisor, Dr Nigel Martin, who has been a great support from the very start to the end. Also, I want to acknowledge my boss, Edward Griffith, for accommodating me to study while working.
 
 My sincerest gratitude are to my parents for their uninterrupted believe in me, my wife for her endless patience and my daughter for sharing my attention with this thesis in her first week.
