--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 
-A \emph{recommender system} is a software which suggests useful items to a user usually on a website. A user is typically assisted in their search process on the website to find the right item. Recommender systems are able to personalise so that they try to suggest only items relevant for the given user. In order to do this recommender systems rely on multiple techniques, notably \emph{collaborative filtering} and \emph{content-based filtering}.
+A \emph{recommender system} is a software which suggests useful items to a user usually on a website. A user is typically assisted in their search process on the website to find the right item. Recommender systems are able to personalise so that they try to suggest only items relevant for the given user. In order to do this, recommender systems rely on multiple techniques, notably \emph{collaborative filtering} and \emph{content-based filtering}.
 
 Recommender systems are usually tightly coupled to the domain and system architecture. Bespoke recommender systems may be very dependent on the system's data model as well as technical constraints such as programming languages. The adaption of recommender systems require knowledge and expertise in both domain and recommender systems. The effort would add more complexity and dependencies to systems, which are probably complex themselves, making change very expensive and time consuming. Being tightly coupled, a recommender implementation is very likely to be incompatible for another use case.
 
@@ -10,9 +10,9 @@ This project aimed to develop and evaluate approaches to unscramble this complex
 
 \citet{ricci11} write that traditional recommendations can be observed in various scenarios, such as a peer's recommendation when buying a book or reviews when choosing a movie. The authority of the recommender has an important role in the acceptance of the recommendation. A renowned film critic may appear more credible than a random colleague. When it comes to car parts, a mechanist may be a good candidate to ask.
 
-With the growth of the Internet, the amount of information available on the Web increased rapidly. Especially, major e-commerce Web sites were extending their range of products and services. Although a wider and varied range of items is initially good for the user, users found it more and more difficult to find the appropriate items or make the right choices. Web sites have deployed different type of solutions -- such as search engines and more user friendly interfaces -- to cope with this problem.
+With the growth of the Internet, the amount of information available on the Web increased rapidly. Especially, major e-commerce Web sites were extending their range of products and services. Although a wider and varied range of items is initially good for the user, users found it more and more difficult to find the appropriate items or make the right choices. Web sites have deployed different type of solutions -- such as search engines and more user-friendly interfaces -- to cope with this problem.
 
-Another approach are recommender systems which basically provide a bespoke collection of items with the intention to highlight relevant items to a user. Depending on the recommendation technique used, various data sources are taken into account like the user's context or previous interactions. Most recommender systems concentrate on guiding the user towards novel, unexperienced items \cite{herlocker04}.
+Another approach is recommender systems, which basically provide a bespoke collection of items with the intention to highlight relevant items to a user. Depending on the recommendation technique used, various data sources are taken into account like the user's context or previous interactions. Most recommender systems concentrate on guiding the user towards novel, unexperienced items \cite{herlocker04}.
 
 \subsection{Techniques}
 
@@ -27,11 +27,11 @@ In the course of development different techniques to compute recommendations eme
     \label{fig:collaborative}
 \end{figure}
 
-This technique recommends items other users with similar preferences have shown a positive expression e.g. \emph{liked} or \emph{purchased}. In order to do this, the recommender system needs to observe users' behaviours and interactions. Based on these learnings, it will then look up other users with similar behaviour patterns and build recommendations from their preferences -- preferably items which the active user has not experienced yet.
+This technique recommends items other users with similar preferences have shown a positive expression e.g. \emph{liked} or \emph{purchased}. In order to do this, the recommender system needs to observe users' behaviours and interactions. Based on these learnings, it will then look up other users with similar behaviour patterns and build recommendations from their preferences -- preferably items that the active user has not experienced yet.
 
 The major advantage of the collaborative filtering approach is that the recommender system does not require any knowledge about the items itself.
 
-Figure \ref{fig:collaborative} illustrates a scenario where the active customer has purchased several items in the past. The recommender system understands that the active customer is similar to another as both have purchased the phone and the laptop. Then, the system computes items the similar customer purchased but the active customer has not. It therefore recommends the TV to the active customer.
+Figure \ref{fig:collaborative} illustrates a scenario where the active customer has purchased several items in the past. The recommender system understands that the active customer is similar to another, as both have purchased the phone and the laptop. Then, the system computes items the similar customer purchased but the active customer has not. It therefore recommends the TV to the active customer.
 
 \subsubsection{Content-Based Filtering}
 
@@ -41,14 +41,14 @@ Figure \ref{fig:collaborative} illustrates a scenario where the active customer 
     \label{fig:contentbased}
 \end{figure}
 
-Content-based recommendation methods make use of item features to find similar items. Based on items the user has shown a preference to before -- such as \emph{rated} or \emph{purchased} -- other similar items are looked up based on the item's features. Figure \ref{fig:contentbased} illustrates a customer who has rated an item positively. The recommender system compares the rated item with other items, finds another item which has the same brand and therefore recommends that item.
+Content-based recommendation methods make use of item features to find similar items. Based on items the user has shown a preference to before -- such as \emph{rated} or \emph{purchased} -- other similar items are looked up based on the item's features. Figure \ref{fig:contentbased} illustrates a customer who has rated an item positively. The recommender system compares the rated item with other items, finds another item, which has the same brand and therefore recommends that item.
 
 \subsubsection{Hybrids}
 \label{intro-bg-tech-hybrid}
 
 Hybrid recommender systems make use of two or more individual recommender systems -- hereinafter referred to as components -- to combine aforementioned techniques. One possible motivation of using hybrid systems may be to overcome weaknesses of one approach by combining it with another. However it is also possible to combine systems implementing the same technique but e.g. using different data sources.
 
-There are many possible ways of combining techniques which are outlined in the proposal. In this project, a \emph{weighted} hybrid recommender was implemented which combines the scores of recommender components using a linear formula. A score is a numerical rank attached to items.
+There are many possible ways of combining techniques, which are outlined in the proposal. In this project, a \emph{weighted} hybrid recommender was implemented which combines the scores of recommender components using a linear formula. A score is a numerical rank attached to items.
 
 \section{Objectives}
 \label{intro-objectives}
@@ -69,7 +69,7 @@ This objective aims a separation of a system into smaller, loose coupled compone
 \subsection{Ease of integration}
 \label{intro-objectives-easeofintegration}
 
-The complexity and cost of integration of new systems into existing applications is a major constraint for many projects. This objective covers the ease of integration of applications as well as new recommender techniques. It is measured by the complexity, code footprint, interactions and data volumes of the communication interfaces.
+The complexity and cost of integration of new systems into existing applications is a major constraint for many projects. This objective covers the ease of integration of applications as well as new recommender techniques. The code footprint, interactions and data volumes of the communication interfaces are typical measures of complexity.
 
 \subsection{Multi-Purpose \& Interoperability}
 \label{intro-objectives-multipurpose}
@@ -86,7 +86,7 @@ This multi-purposefulness can be also described in the interoperability between 
 
 \subsection{Technological Unbiasedness}
 
-The proposal inarticulately stated another objective to build a mechanism which allows the integration of various recommender techniques to \emph{coexist} and \emph{cooperate}. \emph{Coexistence} refers to supporting various recommender techniques and solutions regardless of technology, language, storage technology and operating system. Furthermore, \emph{cooperation} emphasises the aforementioned interoperability between those recommenders.
+The proposal inarticulately stated another objective to build a mechanism, which allows the integration of various recommender techniques to \emph{coexist} and \emph{cooperate}. \emph{Coexistence} refers to supporting various recommender techniques and solutions regardless of technology, language, storage technology and operating system. Furthermore, \emph{cooperation} emphasises the aforementioned interoperability between those recommenders.
 
 \section{Structure of the Report}
 
